# libllama

./: .gitignore  CMakeLists.txt  Makefile  README.md  binding.cpp  binding.h  deno.json  example.ts  libllama.ts  libllama_ffi.ts
examples/: chat.ts  simple.ts
